--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "build": "next build",
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && next start -p 8080",
     "lint": "eslint . --ext ts,tsx",
     "lint:fix": "eslint --fix .",
